pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-ssl-passthrough-no-root.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-ssl-passthrough-no-root
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: passthrough-no-root.whoami.localhost
      http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: whoami-tls
                port:
                  number: 443
